# metadata_macro

./: Cargo.toml  README.md  _home_rickastley_Projects_rust_structfield_metadata.json
proc-macro/: Cargo.toml
proc-macro/src/: attr.rs  lib.rs
src/: lib.rs
tests/: declarative_macros.rs
